locorestrings.py: use json.dumps() for proper JSON escaping
The script was writing JSON strings with manual quoting, which broke
when translations contained double quotes (e.g. Afrikaans, Hebrew).
Use json.dumps() to properly escape all special characters.

Regenerated af.json and dgo.json which were the only files affected
beyond the already-fixed he.json (af8de78f5e).

Signed-off-by: Andras Timar <andras.timar@collabora.com>
Change-Id: Id851163a628b9b3a9ab4397b7e25edb6d56aa43a

--- a/browser/l10n/locore/af.json
+++ b/browser/l10n/locore/af.json
@@ -198,7 +198,7 @@
 "English (Zimbabwe)":"Engels (Zimbabwe)",
 "English, OED spelling (UK)":"Engels, OED-spelling (VK)",
 "Envelope":"Koevert",
-"Error":""Error"-font",
+"Error":"\"Error\"-font",
 "Erzya":"Erzya",
 "Esperanto":"Esperanto",
 "Estonian":"Estnies",
@@ -267,7 +267,7 @@
 "Graphics":"Grafika",
 "Greek":"Grieks",
 "Greek, Ancient":"Grieks, Antiek",
-"Gronings":""Gronings"",
+"Gronings":"\"Gronings\"",
 "Group":"Groep",
 "Guadeloupean Creole French":"Kreools Frans Guadeloupe",
 "Guarani (Paraguay)":"Guaranees (Paraguay)",
