--- a/browser/l10n/locore/dgo.json
+++ b/browser/l10n/locore/dgo.json
@@ -40,7 +40,7 @@
 "Background objects":"पछौकड़ चीजां",
 "Bafia":"बफिया",
 "Bambara":"बंबारा",
-"Basic Shapes":"मूल आकार 	",
+"Basic Shapes":"मूल आकार \t",
 "Basque":"बास्क",
 "Beembe":"बींबि",
 "Bekwel":"बेक्वेल",
@@ -50,7 +50,7 @@
 "Bibliography 1":"ग्रंथ-सूची 1 ",
 "Bibliography Heading":"ग्रंथ-सूची सिरनांऽ ",
 "Blank Slide":"कोरी स्लाइड ",
-"Block Arrows":"ब्लाक तीर (बहु0) 	",
+"Block Arrows":"ब्लाक तीर (बहु0) \t",
 "Bodo":"बोडो",
 "Bosnian":"बोसनियन",
 "Breton":"ब्रिटन",
@@ -70,7 +70,7 @@
 "Chuvash":"चुवाश",
 "Clear formatting":"रूप-रचना साफ करो",
 "Complimentary Close":"मानार्थ बंद",
-"Connectors":" जोड़क (बहु0)	",
+"Connectors":" जोड़क (बहु0)\t",
 "Contents 1":"विशे सूची 1 ",
 "Contents 10":"विशे सूची 10 ",
 "Contents 2":"विशे सूची 2 ",
@@ -124,7 +124,7 @@
 "Finnish":"फिन्निश ",
 "First Line Indent":"पैह्‌‌ला लकीर इंडैंट",
 "First Page":"पैह्‌ला सफा ",
-"Flowchart":"फ्लोचार्ट	",
+"Flowchart":"फ्लोचार्ट\t",
 "Footer":"पैरलेख ",
 "Footer Left":"पैरलेख खब्बै",
 "Footer Right":"पैरलेख सज्जै",
